<resources>
    //ActionBar Titles
    <string name="app_name">arbitrApp</string>
    <string name="home_name">Home</string>

    <string name="splash1">arbitr</string>
    <string name="splash2">App</string>

    //LOGIN
    <string name="email">Email</string>
    <string name="loginEmail">Usuario</string>
    <string name="loginPassword">Contraseña</string>
    <string name="loginButton">Iniciar Sesión</string>
    <string name="loginFail1">UPS…No has podido iniciar sesión</string>
    <string name="loginFail2">Tu usuario y contraseña no coinciden. Por favor, intentalo de nuevo</string>
    <string name="invitado">Acceder como invitado</string>
    <string name="loginInvitado">Iniciando sesión como invitado…</string>
    <string name="forgotPassword"><u>Olvide mi contraseña</u></string>
    <string name="introEmail">Introduzca el email</string>
    <string name="emailError">Email no válido</string>
    <string name="introPass">Introduzca la contraseña</string>
    <string name="passError">Formato de contraseña no válido</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    //RESET PASSWORD
    <string name="resetPassword">Restablecer contraseña</string>
    <string name="resetSending">Enviando email…</string>
    <string name="introResetPass">Introduzca el correo para el que reestablecer su contraseña</string>
    <string name="resetOk">Se ha enviado un email para reestablecer tu contraseña</string>
    <string name="resetError">Ha ocurrido un error al enviar el correo de reestablecimiento de contraseña</string>

    //HOME
    <string name="competicionesIcon">Competiciones</string>
    <string name="homeIcon">Home</string>
    <string name="perfilIcon">Perfil</string>

    //PERFIL
    <string name="navDatos">Datos</string>
    <string name="navAgenda">Agenda</string>
    <string name="navEstadisticas">Estadísticas</string>
    <string name="nombrePerfil">Nombre Apellido1 Apellido2</string>
    <string name="categoriaPerfil">Categoría</string>
    <string name="datosNombre">Nombre</string>
    <string name="datosApellidos">Apellidos</string>
    <string name="datosEdad">Edad</string>
    <string name="datosNacionalidad">Nacionalidad</string>
    <string name="datosMovil">Móvil</string>
    <string name="datosEmail">Email</string>
    <string name="partidosArbitrados">Partidos arbitrados</string>
    <string name="valoracionGeneral">Valoración general</string>
    <string name="valoracionRecibidas">Valoraciones recibidas</string>
    <string name="proximosPartidos">Próximos partidos</string>
    <string name="partidosDirecto">Partidos en directo</string>
    <string name="noProximosPartidos">No hay partidos próximamente</string>
    <string name="noPartidosDirecto">No hay partidos en directo</string>
    <string name="hoy">HOY</string>
    <string name="mañana">MAÑANA</string>
    <string name="semana">SEMANA</string>
    <string name="como_llegar">COMO LLEGAR</string>
    <string name="perfilError">Perfil no disponible</string>
    <string name="logInPerfil">Inicia sesión para acceder a tu perfil</string>
    <string name="noPartidosHoy">No hay partidos hoy</string>
    <string name="noPartidosManana">No hay partidos mañana</string>
    <string name="noPartidosSemana">No hay partidos esta semana</string>
    <string name="estadisticasError">No se han podido obtener las estadísticas</string>

    //PARTIDO
    <string name="partidoActivity">PARTIDO</string>
    <string name="equipo">Equipo</string>
    <string name="rol">rol</string>
    <string name="informacion">INFORMACIÓN</string>
    <string name="local">LOCAL</string>
    <string name="visitante">VISITANTE</string>
    <string name="estadoPartido">Estado</string>
    <string name="localPartido">Equipo Local</string>
    <string name="visitantePartido">Equipo Visitante</string>
    <string name="lugarPartido">Lugar</string>
    <string name="fechaPartido">Fecha</string>
    <string name="horaPartido">Hora</string>
    <string name="resultadoPartido">Resultado</string>
    <string name="arbitraje">Arbitraje</string>
    <string name="cuerpo_tecnico">Cuerpo Técnico</string>
    <string name="jugadores">Jugadores</string>
    <string name="jugadores_titulares">Jugadores Titulares</string>
    <string name="jugadores_suplentes">Jugadores Suplentes</string>
    <string name="sin_partidos_jugados">No hay partidos jugados</string>
    <string name="sin_partidos_pendientes">No hay partidos pendientes</string>
    <string name="arbitros">Árbitros</string>
    <string name="sin_arbitros_asignados">No hay arbitros asignados</string>
    <string name="anadirArbitro">Añadir árbitro</string>
    <string name="valorarArbitro">Valorar árbitro</string>
    <string name="valorar">Valorar</string>
    <string name="enDirecto">EN DIRECTO</string>
    <string name="partidoError">No se ha podido obtener la información del partido</string>
    <string name="match">PARTIDO</string>
    <string name="verActa">Ver acta</string>
    <string name="actaError">Acta no disponible</string>
    <string name="arbitrosOK">Árbitros actualizados con éxito</string>
    <string name="arbitrosError">No se han podido actualizar los árbitros</string>
    <string name="valorarOK">Árbitro Valorado con éxito</string>
    <string name="valorarError">No se ha podido realizar la valoración</string>
    <string name="tecnicosPartido">Técnicos: </string>
    <string name="jugadoresPartido">Jugadores: </string>
    <string name="alineacionOK">Alineación actualizada con éxito</string>
    <string name="alineacionError">No se ha podido actualizar la alineación</string>
    <string name="maxArbitros">El máximo de árbitros es </string>
    <string name="partidoEstado">Estado del partido</string>
    <string name="noSuplentes">No hay suplentes</string>
    <string name="seleccionaJugador">Selecciona jugador</string>

    //ACTA
    <string name="acta">ACTA</string>
    <string name="alineaciones">Alineaciones</string>
    <string name="partido">Partido</string>

    //EQUIPO
    <string name="JUGADOR">JUGADOR</string>
    <string name="TECNICO">TÉCNICO</string>
    <string name="categoria">Categoría</string>
    <string name="ciudad">Ciudad</string>
    <string name="Campo">Campo de juego</string>
    <string name="plantilla_equipo">Plantilla</string>
    <string name="estadisticas_equipo">Estadísticas</string>
    <string name="calendario_equipo">Calendario</string>
    <string name="tipo_miembro">Tipo Miembro</string>
    <string name="calendario_jugados">Jugados</string>
    <string name="calendario_pendientes">Pendientes</string>
    <string name="anos">años</string>
   <string name="miembroError">No se ha podido acceder al miembro</string>

    //estadisticas
    <string name="partidos">Partidos</string>
    <string name="goles">Goles</string>
    <string name="tarjetas">Tarjetas</string>
    <string name="total">Total</string>
    <string name="jugados">Jugados</string>
    <string name="sinJugar">Sin jugar</string>
    <string name="victorias">Victorias</string>
    <string name="empates">Empates</string>
    <string name="derrotas">Derrotas</string>
    <string name="ganados">Ganados</string>
    <string name="perdidos">Perdidos</string>
    <string name="empatados">Empatados</string>
    <string name="favor">A favor</string>
    <string name="contra">En contra</string>
    <string name="amarillas">Amarillas</string>
    <string name="rojas">Rojas</string>
    //persona
    <string name="titular">Titular</string>
    <string name="suplente">Suplente</string>
    <string name="marcados">Marcados</string>
    <string name="recibidos">Recibidos</string>
    <string name="propiaPuerta">Propia puerta</string>

    //ARBITRO
    <string name="ARBITRO">ÁRBITRO</string>
    <string name="informacion_arbitro">Información</string>
    <string name="agenda_arbitro">Agenda</string>
    <string name="arbitroError">No se ha podido obtener la información del árbitro</string>
    <string name="emailSubject">Mensaje de arbitrApp</string>
    <string name="emailChoose">Elige la aplicación de correo</string>
    <string name="emailChooseError">No hay aplicaciones de correo instaladas</string>
    <string name="callError">Permiso de llamadas denegado</string>

    //COMPETICIONES
    <string name="temporada">Temporada</string>
    <string name="sede">Sede</string>
    <string name="buscar">BUSCAR</string>
    <string name="favoritos">Favoritos</string>
    <string name="equipos">Equipos</string>
    <string name="clasificacion">Clasificación</string>
    <string name="seleccionaTemporada">Selecciona temporada</string>
    <string name="seleccionaSede">Selecciona sede</string>
    <string name="seleccionaCategoria">Selecciona categoría</string>
    <string name="competicionFavorita">Competición añadida a Favoritos</string>

    //clasificacion
    <string name="leyenda">Leyenda</string>
    <string name="puntos">Puntos</string>
    <string name="leyenda1">Campeón de Liga</string>
    <string name="leyenda2">Ascenso</string>
    <string name="leyenda3">Descenso</string>
    //jornada
    <string name="jornada">Jornada</string>
    <string name="Partidos">Partidos:</string>
    <string name="PJ">PJ:</string>
    <string name="PNJ">PNJ:</string>
    <string name="PS">PS:</string>
    <string name="PA">PA:</string>

    //ARBITRAR
    <string name="tiempoCorrido">Tiempo corrido</string>
    <string name="tiempoParado">Tiempo parado</string>
    <string name="gol">Gol</string>
    <string name="GOL">GOL</string>
    <string name="golPropia">Gol propia</string>
    <string name="sustitucion">Sustitución</string>
    <string name="amarilla">Amarilla</string>
    <string name="roja">Roja</string>
    <string name="segundaAmarilla">Doble Amarilla</string>
    <string name="lesion">Lesión</string>
    <string name="terminar">Terminar</string>
    <string name="aFavor">A favor</string>
    <string name="enContra">En contra</string>
    <string name="evento">Evento</string>
    <string name="motivo">Motivo</string>
    <string name="confirmar">Confirmar</string>
    <string name="finalizarPartido">Finalizar partido</string>
    <string name="arbitrarPartido">Arbitrar partido</string>
    <string name="segundaParte">Segunda parte</string>
    <string name="iniciar">Iniciar</string>
    <string name="finalizar">Finalizar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_maps">Map</string>
    <string name="alineacion">Alineación</string>
    <string name="expulsado">ha sido expulsado</string>
    <string name="siAmarilla">ya tiene tarjeta amarilla</string>
    <string name="noAmarilla">no tiene tarjeta amarilla</string>
    <string name="sustituido">ha sido sustituido</string>
    <string name="siSustituido">ya ha sido sustituido</string>
    <string name="noSustituido">no ha sido sustituido</string>

    //CAMPOS
    <string name="nombreCampo">Nombre campo</string>
    <string name="direccion">Dirección</string>
    <string name="capacidad">Capacidad</string>
    <string name="espectadores">espectadores</string>

    //DIALOGS
    <string name="dialogEstadisticas">Recuperando estadísticas…</string>
    <string name="dialogArbitro">Recuperando árbitro…</string>
    <string name="dialogEquipo">Recuperando equipo…</string>
    <string name="dialogDatos">Recuperando datos…</string>
    <string name="dialogEventos">Recuperando eventos…</string>

</resources>
